[gd_scene load_steps=5 format=3 uid="uid://dvrku5fkse63s"]

[ext_resource type="Script" path="res://MainScene.gd" id="1"]

[sub_resource type="Theme" id="Theme_mpp0x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ic52l"]
bg_color = Color(0.117647, 0.470588, 0.713726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gskj5"]
bg_color = Color(0.117647, 0.470588, 0.713726, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = -7.0
offset_right = 1163.0
offset_bottom = 663.0
mouse_filter = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Search" type="Button" parent="."]
layout_mode = 0
offset_left = 676.0
offset_top = 191.0
offset_right = 793.0
offset_bottom = 235.0
theme = SubResource("Theme_mpp0x")
theme_override_styles/normal = SubResource("StyleBoxFlat_ic52l")
text = "Search"

[node name="ProtocolRequest" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 499.0
offset_top = 38.0
offset_right = 629.0
offset_bottom = 76.0
text = "ClinicalExplore"
autowrap_mode = 1

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 191.0
offset_right = 642.0
offset_bottom = 228.0
item_count = 9
selected = 0
popup/item_0/text = "Drug Name"
popup/item_0/id = 0
popup/item_1/text = "Manufacturer Name"
popup/item_1/id = 1
popup/item_2/text = "Start Date(ie. 2017-03-06)"
popup/item_2/id = 2
popup/item_3/text = "End Date(ie. 2017-03-06)"
popup/item_3/id = 3
popup/item_4/text = "No Objection Letter Date(ie. 2017-03-06)"
popup/item_4/id = 4
popup/item_5/text = "Trial Status"
popup/item_5/id = 5
popup/item_6/text = "Description"
popup/item_6/id = 6
popup/item_7/text = "Medical Conditions"
popup/item_7/id = 7
popup/item_8/text = "Testing Groups"
popup/item_8/id = 8

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 128.0
offset_right = 790.0
offset_bottom = 179.0
text = "Enter Text Here"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 293.0
offset_top = 294.0
offset_right = 796.0
offset_bottom = 584.0
tooltip_text = "Scroll to see more grug clinical trials"
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="SearchDisplay" type="Label" parent="ScrollContainer"]
layout_mode = 2

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 247.0
offset_right = 544.0
offset_bottom = 273.0
text = "Loading..."

[node name="LoadMore" type="Button" parent="."]
layout_mode = 0
offset_left = 533.0
offset_top = 603.0
offset_right = 684.0
offset_bottom = 634.0
theme_override_styles/normal = SubResource("StyleBoxFlat_gskj5")
text = "Load More Results"

[node name="NumberOfResults" type="Label" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 606.0
offset_right = 473.0
offset_bottom = 632.0
text = "0/0"

[connection signal="pressed" from="Search" to="." method="_on_search_pressed"]
[connection signal="pressed" from="LoadMore" to="." method="_on_load_more_pressed"]
